fixed overall css, aesthetics

--- a/src/App.css
+++ b/src/App.css
@@ -50,12 +50,6 @@ p, a, li, button, ul {
   text-decoration: none;
 }
 
-p2 {
-  align-items: center;
-  flex: 100;
-  padding: 200
-}
-
 a:hover {
   text-decoration: none;
 }
@@ -123,6 +117,7 @@ span.navbar-text {
 .social-icon {
     display: inline-block;
     margin-left: 14px;
+    margin-top: 20px;
 }
 .paragraph-image {
   display: flex;
@@ -358,7 +353,9 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .project {
   padding: 80px 0;
   position: relative;
-  background-color: black;
+  background-color: rgb(10, 10, 10);
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .project h2 {
 	font-size: 45px;
@@ -487,11 +484,13 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .contact img {
   width: 92%;
+  margin-top: 100px;
 }
 .contact h2 {
 	font-size: 45px;
 	font-weight: 700;
-  margin-bottom: 30px;
+  margin-bottom: 0px;
+  margin-top: 100px;
 }
 .contact form input, .contact form textarea {
   width: 100%;
@@ -556,6 +555,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Footer Css ************/
 .footer {
+  align-content: center;
   padding: 0 0 50px 0;
   background-image: url('./assets/img/footer-bg.png');
   background-position: center center;
