--- a/src/App.css
+++ b/src/App.css
@@ -266,6 +266,13 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   margin-bottom: 20px;
   display: block;
 }
+.banner h3 {
+  color: #ffffff;
+  font-size: 24px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+  width: 96%;
+}
 .banner p {
   color: #B8B8B8;
   font-size: 18px;
@@ -488,6 +495,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .contact h2 {
 	font-size: 45px;
+	font-weight: 700;
+  margin-bottom: 0px;
+  margin-top: 5px;
+}
+.contact h3 {
+	font-size: 36px;
 	font-weight: 700;
   margin-bottom: 0px;
   margin-top: 100px;
