--- a/src/App.css
+++ b/src/App.css
@@ -488,7 +488,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 /************ Projects Css ************/
 .contact {
   background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
-  padding: 60px 0 200px 0;
+  padding: 60px 0 60px 0;
 }
 .contact img {
   width: 92%;
@@ -566,6 +566,25 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 
+/************ Location CSS ***********/
+
+.location {
+  padding: 0px 0 0px 0;
+}
+.location h2 {
+	font-size: 45px;
+	font-weight: 700;
+  margin-bottom: 0px;
+  margin-top: 5px;
+  text-align: center;
+  flex: 1,
+}
+.location h3 {
+	font-size: 36px;
+	font-weight: 700;
+  margin-bottom: 0px;
+  margin-top: 100px;
+}
 
 /************ Footer Css ************/
 .footer {
