--- a/src/App.css
+++ b/src/App.css
@@ -569,21 +569,22 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 /************ Location CSS ***********/
 
 .location {
-  padding: 0px 0 0px 0;
+  padding: 50px 0 50px 0;
 }
 .location h2 {
 	font-size: 45px;
 	font-weight: 700;
-  margin-bottom: 0px;
+  margin-bottom: 5px;
   margin-top: 5px;
   text-align: center;
   flex: 1,
 }
-.location h3 {
-	font-size: 36px;
-	font-weight: 700;
-  margin-bottom: 0px;
-  margin-top: 100px;
+.location p {
+	font-size: 18px;
+	font-weight: 100;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  text-align: center;
 }
 
 /************ Footer Css ************/
