--- a/src/App.css
+++ b/src/App.css
@@ -590,7 +590,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 /************ Footer Css ************/
 .footer {
   align-content: center;
-  padding: 0 0 50px 0;
+  padding: 0 0 0 0;
   background-image: url('./assets/img/footer-bg.png');
   background-position: center center;
   background-size: cover;
