--- a/src/App.css
+++ b/src/App.css
@@ -243,7 +243,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 /************ Banner Css ************/
 .banner {
   margin-top: 0;
-  padding: 260px 0 100px 0;
+  padding: 100px 0 50px 0;
   background-image: url('./assets/img/banner-bg.png');
   background-position: top center;
   background-size: cover;
@@ -359,7 +359,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Projects Css ************/
 .project {
-  padding: 80px 0;
+  padding: 0 0;
   position: relative;
   background-color: rgb(10, 10, 10);
   padding-top: 100px;
@@ -485,10 +485,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   z-index: -4;
 }
 
-/************ Projects Css ************/
+/************ Contact Css ************/
 .contact {
   background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
-  padding: 60px 0 60px 0;
+  padding: 5px 0 20px 0;
 }
 .contact img {
   width: 92%;
@@ -569,12 +569,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 /************ Location CSS ***********/
 
 .location {
-  padding: 50px 0 50px 0;
+  padding: 5px 0 5px 0;
 }
 .location h2 {
 	font-size: 45px;
 	font-weight: 700;
-  margin-bottom: 50px;
+  margin-bottom: 5px;
   margin-top: 5px;
   text-align: center;
   flex: 1,
@@ -583,7 +583,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 	font-size: 18px;
 	font-weight: 100;
   margin-bottom: 5px;
-  margin-top: 25px;
+  margin-top: 5px;
   text-align: center;
 }
 
