--- a/src/App.css
+++ b/src/App.css
@@ -244,7 +244,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .banner {
   margin-top: 0;
   padding: 180px 0 50px 0;
-  background-image: url('./assets/img/banner-bg.png');
+  background-image: url('./assets/img/beach3.png');
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -275,7 +275,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   width: 96%;
 }
 .banner p {
-  color: #B8B8B8;
+  color: #ffffff;
   font-size: 18px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
