--- a/src/App.css
+++ b/src/App.css
@@ -126,6 +126,7 @@ span.navbar-text {
   height: 128px;
   align-items: center;
   justify-content: center;
+  margin: -10px -10px;
 }
 .social-icon a {
     width: 42px;
@@ -362,8 +363,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   padding: 0 0;
   position: relative;
   background-color: rgb(10, 10, 10);
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 .project h2 {
 	font-size: 45px;
@@ -376,6 +377,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   letter-spacing: 0.8px;
   line-height: 1.5em;
   margin: 14px auto 30px auto;
+  text-align: center;
+  width: 56%;
+}
+.project p2{
+  color: #B8B8B8;
+  font-size: 12px;
+  letter-spacing: 0.8px;
+  margin: 0 0;
   text-align: center;
   width: 56%;
 }
