--- a/src/App.css
+++ b/src/App.css
@@ -604,6 +604,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
+  margin-top: 10px;
 }
 .newsletter-bx {
   background: #FFFFFF;
