--- a/src/App.css
+++ b/src/App.css
@@ -380,7 +380,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   text-align: center;
   width: 56%;
 }
-.project p2{
+.project h4{
   color: #B8B8B8;
   font-size: 12px;
   letter-spacing: 0.8px;
